--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -32,6 +32,9 @@ Introduction Section
 
 \section{Background}
 Background of Machine Learning and Deep Learning
+
+Here I am going to cite the Bengio paper \cite{bengio2009learning}
+
 \begin{enumerate}
 \item Deep Learning\\
 
@@ -66,6 +69,8 @@ Conclusion and Future work\\
 \section*{Reference}
 Reference Section\\
 
+\bibliographystyle{plain}
+\bibliography{references.bib}
 
 \end{document}
 
