--- a/paper/references.bib
+++ b/paper/references.bib
@@ -8,3 +8,27 @@
   year={2009},
   publisher={Now Publishers Inc.}
 }
+
+@article{UnderstandingLSTMNetworks,
+  title={Understanding LSTM Networks},
+  author={Christopher Olah},
+}
+
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
+}
+
+@article{zaremba2014recurrent,
+  title={Recurrent neural network regularization},
+  author={Zaremba, Wojciech and Sutskever, Ilya and Vinyals, Oriol},
+  journal={arXiv preprint arXiv:1409.2329},
+  year={2014}
+}
+
