--- a/paper/references.bib
+++ b/paper/references.bib
@@ -9,11 +9,6 @@
   publisher={Now Publishers Inc.}
 }
 
-@article{UnderstandingLSTMNetworks,
-  title={Understanding LSTM Networks},
-  author={Christopher Olah},
-}
-
 @article{hochreiter1997long,
   title={Long short-term memory},
   author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
@@ -30,5 +25,16 @@
   author={Zaremba, Wojciech and Sutskever, Ilya and Vinyals, Oriol},
   journal={arXiv preprint arXiv:1409.2329},
   year={2014}
+}
+
+@article{hinton2006reducing,
+  title={Reducing the dimensionality of data with neural networks},
+  author={Hinton, Geoffrey E and Salakhutdinov, Ruslan R},
+  journal={science},
+  volume={313},
+  number={5786},
+  pages={504--507},
+  year={2006},
+  publisher={American Association for the Advancement of Science}
 }
 
